# boostburn

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: pricing.yaml  regions.example.yaml
docs/: assignment.md  configuration.md  slack-setup.md
evals/: evaluator.py  golden_data.yaml
evals/fixtures/: config.yaml  config_east.yaml  config_west.yaml  pricing_cache_full.json  pricing_cache_full.yaml  pricing_cache_missing.json  pricing_cache_missing.yaml
evals/fixtures/buckets/bedrock-logs-123456789012-us-east-2/AWSLogs/123456789012/BedrockModelInvocationLogs/us-east-2/2026/02/01/17/: 20260201T173052540Z_0b98d2144de6272e.json
evals/fixtures/buckets/bedrock-logs-123456789012-us-west-2/AWSLogs/123456789012/BedrockModelInvocationLogs/us-west-2/2026/02/01/12/: 20260201T121500000Z_abc123def456789a.json
scripts/: scrape_bedrock_pricing.py
src/boostburn/: __init__.py  cli.py  config.py  env.py  logging_utils.py  models.py  pricing_scraper.py  reporting.py
src/boostburn/adapters/: aws_s3.py  local_s3.py  pricing.py  report_store.py  slack.py
src/boostburn/graph/: state.py  workflow.py
src/boostburn/ingest/: bedrock_parser.py
src/boostburn/metrics/: aggregator.py
src/boostburn/state/: manifest.py
tests/: test_env.py  test_incremental_scan.py  test_metrics.py  test_parser.py  test_pricing.py  test_pricing_scraper.py  test_report_outputs.py
